implemented dummy data in tables

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </section>
 
 
-<table>
+<!-- <table>
   <thead>
     <th>Project Name</th>
     <th>Due Date</th>
@@ -20,4 +20,4 @@
       <td>{{review.Author}}</td>
     </tr>
   </tbody>
-</table>
+</table> -->
