--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,15 +1,37 @@
 <html>
-  <h1 id="title">Welcome</h1>
-  <div id="userBox">
+<h1 id="title">Welcome</h1>
+<div id="userBox">
 
-    <div id="topOfTable">
-      <mat-form-field id="searchBox" appearance="fill">
-        <mat-label>Search Users</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. John Smith">
-      </mat-form-field>
-    </div>
+  <div id="topOfTable">
+    <mat-form-field id="searchBox" appearance="fill">
+      <mat-label>Search Users</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. John Smith">
+    </mat-form-field>
+  </div>
 
-    <table mat-table [dataSource]="dataSource">
+  <table>
+    <ng-container *ngFor="let user of users">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell>Name</th>
+        <td mat-cell>
+          <tr>{{user.name}}</tr>
+        </td>
+
+        <!-- <tr>{{user.name}}</tr> -->
+      </ng-container>
+      <ng-container matColumnDef="role">
+
+        <tr>{{user.role}}</tr>
+      </ng-container>
+
+    </ng-container>
+  </table>
+
+
+</div>
+
+</html>
+<!--  <table mat-table [dataSource]="dataSource">
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -37,4 +59,4 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
-</html>
+</html> -->
