--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -19,38 +19,48 @@
     <mat-form-field id="reviewDateTo" appearance="fill">
       <mat-label>To</mat-label>
       <input matInput name="review-date-to" [(ngModel)]="reviewDateTo" [ngModelOptions]="{standalone: true}"
-        [matDatepicker]="datePickerFrom"
-        class="field" maxlength="30" type="text" placeholder="MM/DD/YYYY">
+        [matDatepicker]="datePickerFrom" class="field" maxlength="30" type="text" placeholder="MM/DD/YYYY">
       <mat-datepicker-toggle matSuffix [for]="datePickerFrom"></mat-datepicker-toggle>
       <mat-datepicker #datePickerFrom></mat-datepicker>
     </mat-form-field>
   </div>
 
-  <table mat-table [dataSource]="dataSource">
+  <div id="tableAndGraph">
+    <div id="tableDiv">
+      <table mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef> Role </th>
-      <td mat-cell *matCellDef="let element"> {{element.role}} </td>
-    </ng-container>
+        <ng-container matColumnDef="role">
+          <th mat-header-cell *matHeaderCellDef> Role </th>
+          <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="reviewHours">
-      <th mat-header-cell *matHeaderCellDef> Code Review Hours </th>
-      <td mat-cell *matCellDef="let element"> {{element.reviewHours}} </td>
-    </ng-container>
+        <ng-container matColumnDef="reviewHours">
+          <th mat-header-cell *matHeaderCellDef> Review Hours </th>
+          <td mat-cell *matCellDef="let element"> {{element.reviewHours}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="completedReviews">
-      <th mat-header-cell *matHeaderCellDef> Complete Code Reviews </th>
-      <td mat-cell *matCellDef="let element"> {{element.completedReviews}} </td>
-    </ng-container>
+        <ng-container matColumnDef="completedReviews">
+          <th mat-header-cell *matHeaderCellDef> Complete Reviews </th>
+          <td mat-cell *matCellDef="let element"> {{element.completedReviews}} </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+
+    <div id="graph">
+      <ngx-charts-bar-vertical [scheme]="colorScheme" [results]="ELEMENT_DATA" [xAxis]="showXAxis" [yAxis]="showYAxis"
+        [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel">
+      </ngx-charts-bar-vertical>
+    </div>
+  </div>
 </div>
 
 </html>
