--- a/src/app/reviewer/reviewer.component.scss
+++ b/src/app/reviewer/reviewer.component.scss
@@ -147,4 +147,8 @@ button{
     height: 12%;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
-   
+
+.mat-table{
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
