--- a/src/app/reviewer/reviewer.component.html
+++ b/src/app/reviewer/reviewer.component.html
@@ -53,88 +53,55 @@
 
     
     <div id = "awaitingChart" [@openClose]="isOpenAwait ? 'open' : 'closed'">
-        <table mat-table [dataSource]="dataSource">
-
-            <ng-container matColumnDef="projectName">
-            <th mat-header-cell *matHeaderCellDef> Project Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="dueDate">
-            <th mat-header-cell *matHeaderCellDef> Due Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="requestTo">
-            <th mat-header-cell *matHeaderCellDef> Request To </th>
-            <td mat-cell *matCellDef="let element"> {{element.requestTo}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="author">
-            <th mat-header-cell *matHeaderCellDef> Author </th>
-            <td mat-cell *matCellDef="let element"> {{element.author}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <table class="mat-table">
+            <tr class="mat-header-row">
+            <th class="mat-header-cell">Project Name</th>
+            <th class="mat-header-cell">Due Date</th>
+            <th class="mat-header-cell">Request To</th>
+            <th class="mat-header-cell">Author</th>
+            </tr>
+            <tr class="mat-row" *ngFor="let review of reviews">
+            <td class="mat-cell">{{review.ProjectName}}</td>
+            <td class="mat-cell">{{review.Deadline}}</td>
+            <td class="mat-cell">{{review.RequestTo}}</td>
+            <td class="mat-cell">{{review.Author}}</td>
+            </tr>
+      </table>
     </div>
 
     <div id = "awaitingChart" [@openClose]="isOpenInProg ? 'open' : 'closed'">
-        <table mat-table [dataSource]="dataSource">
-
-            <ng-container matColumnDef="projectName">
-            <th mat-header-cell *matHeaderCellDef> Project Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="dueDate">
-            <th mat-header-cell *matHeaderCellDef> Due Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="requestTo">
-            <th mat-header-cell *matHeaderCellDef> Request To </th>
-            <td mat-cell *matCellDef="let element"> {{element.requestTo}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="author">
-            <th mat-header-cell *matHeaderCellDef> Author </th>
-            <td mat-cell *matCellDef="let element"> {{element.author}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <table class="mat-table">
+            <tr class="mat-header-row">
+            <th class="mat-header-cell">Project Name</th>
+            <th class="mat-header-cell">Due Date</th>
+            <th class="mat-header-cell">Request To</th>
+            <th class="mat-header-cell">Author</th>
+            </tr>
+            <tr class="mat-row" *ngFor="let review of reviews">
+            <td class="mat-cell">{{review.ProjectName}}</td>
+            <td class="mat-cell">{{review.Deadline}}</td>
+            <td class="mat-cell">{{review.RequestTo}}</td>
+            <td class="mat-cell">{{review.Author}}</td>
+            </tr>
+      </table>
         <button mat-button class="feedbackButton" (click)="requestOpenFeedback()">Give Feedback</button>
     </div>
 
     <div id = "awaitingChart" [@openClose]="isOpenComp ? 'open' : 'closed'">
-        <table mat-table [dataSource]="dataSource">
-
-            <ng-container matColumnDef="projectName">
-            <th mat-header-cell *matHeaderCellDef> Project Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="dueDate">
-            <th mat-header-cell *matHeaderCellDef> Due Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="requestTo">
-            <th mat-header-cell *matHeaderCellDef> Request To </th>
-            <td mat-cell *matCellDef="let element"> {{element.requestTo}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="author">
-            <th mat-header-cell *matHeaderCellDef> Author </th>
-            <td mat-cell *matCellDef="let element"> {{element.author}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <table class="mat-table">
+            <tr class="mat-header-row">
+            <th class="mat-header-cell">Project Name</th>
+            <th class="mat-header-cell">Due Date</th>
+            <th class="mat-header-cell">Request To</th>
+            <th class="mat-header-cell">Author</th>
+            </tr>
+            <tr class="mat-row" *ngFor="let review of reviews">
+            <td class="mat-cell">{{review.ProjectName}}</td>
+            <td class="mat-cell">{{review.Deadline}}</td>
+            <td class="mat-cell">{{review.RequestTo}}</td>
+            <td class="mat-cell">{{review.Author}}</td>
+            </tr>
+      </table>
     </div>
 
     <div id = "reviewHoursForm" [@openClose]="reviewHours ? 'open' : 'closed'">
