--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,23 +9,47 @@
     </mat-form-field>
   </div>
 
-  <table>
-    <ng-container *ngFor="let user of users">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell>Name</th>
-        <td mat-cell>
-          <tr>{{user.name}}</tr>
-        </td>
-
-        <!-- <tr>{{user.name}}</tr> -->
-      </ng-container>
-      <ng-container matColumnDef="role">
-
-        <tr>{{user.role}}</tr>
-      </ng-container>
-
-    </ng-container>
+  <table class="mat-table">
+    <tr class="mat-header-row">
+    <th class="mat-header-cell">Name</th>
+    <th class="mat-header-cell">Role</th>
+    </tr>
+    <tr class="mat-row" *ngFor="let user of users">
+      <td class="mat-cell">{{user.name}}</td>
+      <!-- <td class="mat-cell">{{user.role}}</td> -->
+      <td class="mat-cell">
+        <div>
+          <mat-form-field appearance="fill">
+            <mat-label> {{user.role}} </mat-label>
+            <mat-select>
+              <mat-option value="reviewer"> Reviewer </mat-option>
+              <mat-option value="Reviewee"> Reviewee </mat-option>
+              <mat-option value="manager"> Manager </mat-option>
+              <mat-option value="admin"> Admin </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </td>
+    </tr>
   </table>
+
+ 
+  <!--<ng-container *ngFor="let user of users">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell>Name</th>
+      <td mat-cell>
+        <tr>{{user.name}}</tr>
+      </td>
+
+      <tr>{{user.name}}</tr> 
+    </ng-container>
+    <ng-container matColumnDef="role">
+
+      <tr>{{user.role}}</tr>
+    </ng-container>
+
+  </ng-container> -->
+ 
 
 
 </div>
