--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -34,4 +34,8 @@ table {
     transform: translateX(-50%);
     width: 75%;
     margin: 1%;
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    border-radius: 4px;
 }
+
