--- a/src/app/reviewer/reviewer.component.scss
+++ b/src/app/reviewer/reviewer.component.scss
@@ -103,6 +103,8 @@ button{
     height: 70%;
     width: 75%;
     margin-left: -3%;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    border-radius: 4px;
 }
 
 #reviewHoursForm h1{
@@ -151,4 +153,5 @@ button{
 .mat-table{
     text-align: center;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    border-radius: 4px;
 }
