--- a/src/app/manager/manager.component.scss
+++ b/src/app/manager/manager.component.scss
@@ -30,39 +30,18 @@
     background-color: #ffffff;
 }
 
-#tableAndGraph {
-    position: relative;
-    height: 500px;
-    margin-bottom: 1%;
-}
-
-#graph {
-    position: relative;
-    display: inline-block;
-    height: 90%;
-    width: 45%;
-    margin: 2%;
-    fill: #ffffff;
-}
-
-#tableDiv {
-    position: relative;
-    display: inline-block;
-    width: 45%;
-    height: 90%;
-    margin: 2%;
-}
-
-table {
-    position: relative;
-    height: 100%;
-    width: 100%;
-}
-
 h1{
     margin:3%;
 }
 
 p{
     font-size: 25px;
+}
+
+table {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 75%;
+    margin: 1%;
 }
