--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
   </div>
 
-  <table class="mat-table" [dataSource]="dataSource">
+  <table class="mat-table">
     <tr class="mat-header-row">
     <th class="mat-header-cell">Name</th>
     <th class="mat-header-cell">Role</th>
