--- a/src/app/reviewer/reviewer.component.html
+++ b/src/app/reviewer/reviewer.component.html
@@ -69,7 +69,7 @@
                         <td>{{review.deadline}}</td>
                         <td>{{review.id}}</td>
                         <td>{{review.authorID}}</td>
-                        <td><button>Help Wanted</button></td>
+                        <td><input class='helpButton' type='button' value='Help Wanted'/></td>
                     </tr>
                 </tbody>
             </table>
