--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,9 +9,18 @@
                     <span> <a routerLink="/">Codefucius</a></span>
                     <span class="header"></span>
                     <!--<mat-icon class="header-button" aria-hidden="false" aria-label=""></mat-icon>-->
-
+                    <span> <a routerLink="/reviewer">Reviewer</a></span>
+                    <span class="header"></span>
+                    <span> <a routerLink="/reviewee">Reviewee</a></span>
+                    <span class="header"></span>
+                    <span> <a routerLink="/admin">Admin</a></span>
+                    <span class="header"></span>
+                    <span> <a routerLink="/manager">Manager</a></span>
+                    <span class="header"></span>
                     <button mat-raised-button color="accent">Log Out</button>
                 </mat-toolbar-row>
+
+
             </mat-toolbar>
         </nav>
     </div>
