fixed the tables

--- a/src/app/reviewee/reviewee.component.html
+++ b/src/app/reviewee/reviewee.component.html
@@ -67,7 +67,7 @@
                     <td>{{review.title}}</td>
                     <td>{{review.deadline | date }}</td>
                     <td>{{review.id}}</td>
-                    <td>{{review.authorID}}</td>
+                    <td>{{review.authorName}}</td>
                 </tr>
             </tbody>
         </table>
@@ -92,7 +92,7 @@
                     <td>{{review.title}}</td>
                     <td>{{review.deadline | date }}</td>
                     <td>{{review.id}}</td>
-                    <td>{{review.authorID}}</td>
+                    <td>{{review.authorName}}</td>
                 </tr>
             </tbody>
         </table>
@@ -116,7 +116,7 @@
                     <td>{{review.title}}</td>
                     <td>{{review.deadline | date }}</td>
                     <td>{{review.id}}</td>
-                    <td>{{review.authorID}}</td>
+                    <td>{{review.authorName}}</td>
                 </tr>
             </tbody>
         </table>
