--- a/src/app/reviewer/reviewer.component.html
+++ b/src/app/reviewer/reviewer.component.html
@@ -68,7 +68,7 @@
                         <td>{{review.title}}</td>
                         <td>{{review.deadline | date }}</td>
                         <td>{{review.id}}</td>
-                        <td>{{review.authorID}}</td>
+                        <td>{{review.authorName}}</td>
                         <td><input class='helpButton' type='button' value='Help Wanted'/></td>
                     </tr>
                 </tbody>
@@ -91,7 +91,7 @@
                         <td>{{review.title}}</td>
                         <td>{{review.deadline | date }}</td>
                         <td>{{review.id}}</td>
-                        <td>{{review.authorID}}</td>
+                        <td>{{review.authorName}}</td>
                     </tr>
                 </tbody>
             </table>
@@ -114,7 +114,7 @@
                         <td>{{review.title}}</td>
                         <td>{{review.deadline | date }}</td>
                         <td>{{review.id}}</td>
-                        <td>{{review.authorID}}</td>
+                        <td>{{review.authorName}}</td>
                     </tr>
                 </tbody>
             </table>
