--- a/src/app/reviewer/reviewer.component.html
+++ b/src/app/reviewer/reviewer.component.html
@@ -57,18 +57,18 @@
             <table class="mat-table">
                 <thead>
                     <th>Title</th>
-                    <th>Deadline</th>
-                    <th>Request To</th>
+                    <th>Description</th>
                     <th>Author</th>
+                    <th>Deadline</th>
                     <th>Help Wanted</th>
                 </thead>
         
                 <tbody>
                     <tr *ngFor="let review of reviews">
                         <td>{{review.title}}</td>
-                        <td>{{review.deadline | date }}</td>
-                        <td>{{review.id}}</td>
+                        <td>{{review.description}}</td>
                         <td>{{review.authorName}}</td>
+                        <td>{{review.deadline | date }}</td>
                         <td><input class='helpButton' type='button' value='Help Wanted'/></td>
                     </tr>
                 </tbody>
@@ -81,17 +81,17 @@
             <table class="mat-table">
                 <thead>
                     <th>Title</th>
-                    <th>Deadline</th>
-                    <th>Request To</th>
+                    <th>Description</th>
                     <th>Author</th>
+                    <th>Deadline</th>
                 </thead>
         
                 <tbody>
                     <tr *ngFor="let review of reviews">
                         <td>{{review.title}}</td>
-                        <td>{{review.deadline | date }}</td>
-                        <td>{{review.id}}</td>
+                        <td>{{review.description}}</td>
                         <td>{{review.authorName}}</td>
+                        <td>{{review.deadline | date }}</td>
                     </tr>
                 </tbody>
             </table>
@@ -104,17 +104,17 @@
             <table class="mat-table">
                 <thead>
                     <th>Title</th>
-                    <th>Deadline</th>
-                    <th>Request To</th>
+                    <th>Description</th>
                     <th>Author</th>
+                    <th>Deadline</th>
                 </thead>
         
                 <tbody>
                     <tr *ngFor="let review of reviews">
                         <td>{{review.title}}</td>
-                        <td>{{review.deadline | date }}</td>
-                        <td>{{review.id}}</td>
+                        <td>{{review.description}}</td>
                         <td>{{review.authorName}}</td>
+                        <td>{{review.deadline | date }}</td>
                     </tr>
                 </tbody>
             </table>
