--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -6,6 +6,11 @@
     <mat-form-field id="searchBox" appearance="fill">
       <mat-label>Search Data</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. John Smith">
+      <!-- <input matInput (keyup)="applyFilter($event)" [(ngModel)]="name" (input)="filterItem(myInput.value)"
+      <md-input #myInput placeholder="Item name..." [(ngModel)]="name" (input)="filterItem(myInput.value)"></md-input>
+      <div *ngFor="let user of users">
+        {{user.name}}
+      </div>  -->
     </mat-form-field>
 
     <mat-form-field id="reviewDateFrom" appearance="fill">
@@ -18,16 +23,16 @@
 
     <mat-form-field id="reviewDateTo" appearance="fill">
       <mat-label>To</mat-label>
-      <input matInput name="review-date-to" [(ngModel)]="reviewDateTo" [ngModelOptions]="{standalone: true}"
-        [matDatepicker]="datePickerFrom"
-        class="field" maxlength="30" type="text" placeholder="MM/DD/YYYY">
+      <input matInput name="review-date-to" [(ngModel)]="reviewDateTo" [matDatepicker]="datePickerFrom" class="field"
+        maxlength="30" type="text" placeholder="MM/DD/YYYY">
       <mat-datepicker-toggle matSuffix [for]="datePickerFrom"></mat-datepicker-toggle>
       <mat-datepicker #datePickerFrom></mat-datepicker>
     </mat-form-field>
+
   </div>
 
   <div id="tableAndGraph">
-    <div id="tableDiv">
+    <!--  <div id="tableDiv">
       <table mat-table [dataSource]="dataSource">
 
         <ng-container matColumnDef="name">
@@ -53,15 +58,35 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+    </div> -->
+    <div id="tableDiv">
+      <table class="mat-table">
+        <tr class="mat-header-row">
+          <th class="mat-header-cell">Name</th>
+          <th class="mat-header-cell">Role</th>
+          <th class="mat-header-cell">Review Hours Completed</th>
+
+        </tr>
+        <tr class="mat-row" *ngFor="let user of users">
+          <td class="mat-cell">{{user.name}}</td>
+          <td class="mat-cell">{{user.role}}</td>
+          <td class="mat-cell">{{user.reviewHours}}</td>
+        </tr>
+      </table>
     </div>
 
     <div id="graph">
-      <ngx-charts-bar-vertical [scheme]="colorScheme" [results]="ELEMENT_DATA" [xAxis]="showXAxis" [yAxis]="showYAxis"
-        [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
-        [yAxisLabel]="yAxisLabel">
-      </ngx-charts-bar-vertical>
+      <!-- <div *ngFor="let user of users"> -->
+        <ngx-charts-bar-vertical [scheme]="colorScheme" [results]="users" [xAxis]="showXAxis" [yAxis]="showYAxis"
+          [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
+          [yAxisLabel]="yAxisLabel">
+        </ngx-charts-bar-vertical>
+      <!-- </div> -->
     </div>
   </div>
+
+
 </div>
+
 
 </html>
