--- a/src/app/manager/manager.component.scss
+++ b/src/app/manager/manager.component.scss
@@ -57,7 +57,19 @@ table {
     position: relative;
     height: 100%;
     width: 100%;
+    text-align: left;
+
 }
+/* table {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 75%;
+    margin: 1%;
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    border-radius: 4px;
+} */
 
 h1{
     margin:3%;
